[package]
name = "bsh-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Brock <chrisbrock54@gmail.com>"]
description = "WebAssembly bindings for the Brockian Secure Hash (BSH)"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bsh-core = { path = "../bsh-core" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
